--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
                         <input type="checkbox" class="mr-2 text-yellow-600">
                         <span class="text-sm text-gray-600">Remember me</span>
                     </label>
-                    <a href="#" class="text-sm text-yellow-600 hover:text-yellow-700">
+                    <a href="{{ url_for('forgot_password') }}" class="text-sm text-yellow-600 hover:text-yellow-700">
                         Forgot password?
                     </a>
                 </div>
