--- a/templates/blog/my_posts.html
+++ b/templates/blog/my_posts.html
@@ -145,6 +145,10 @@
                            class="px-4 py-2 bg-yellow-500 text-white rounded hover:bg-yellow-600 transition-colors text-center">
                             <i class="fas fa-edit mr-1"></i>Edit
                         </a>
+                        <a href="{{ url_for('blog.export_post_to_word', post_id=post.id) }}"
+                           class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition-colors text-center">
+                            <i class="fas fa-file-word mr-1"></i>Export
+                        </a>
                         <button onclick="deletePost({{ post.id }}, '{{ post.title }}')"
                                 class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600 transition-colors">
                             <i class="fas fa-trash mr-1"></i>Delete
