--- a/templates/index.html
+++ b/templates/index.html
@@ -87,13 +87,24 @@
                         </div>
                     {% endif %}
                     
-                    <div class="mb-3">
+                    <div class="mb-3 flex items-center justify-between">
                         <span class="text-sm text-gray-500">
                             <i class="fas fa-calendar mr-1"></i>{{ post.published_at.strftime('%B %d, %Y') }}
                         </span>
-                        <span class="text-sm text-gray-500 ml-4">
-                            <i class="fas fa-user mr-1"></i>{{ post.first_name }} {{ post.last_name }}
-                        </span>
+                        <div class="flex items-center text-sm text-gray-500">
+                            <!-- Author Avatar -->
+                            {% if post.profile_image_url %}
+                            <img src="/{{ post.profile_image_url }}" alt="{{ post.first_name }}"
+                                 class="w-6 h-6 rounded-full object-cover border border-yellow-600 mr-2">
+                            {% else %}
+                            <div class="w-6 h-6 bg-gradient-to-br from-yellow-400 to-yellow-600 rounded-full flex items-center justify-center mr-2 border border-yellow-700">
+                                <span class="text-xs font-bold text-white">
+                                    {{ post.first_name[0].upper() if post.first_name else post.username[0].upper() }}
+                                </span>
+                            </div>
+                            {% endif %}
+                            <span>{{ post.first_name }} {{ post.last_name }}</span>
+                        </div>
                     </div>
                     
                     <h3 class="text-xl font-bold mb-3 hover:text-yellow-600 transition-colors">
